--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         "type": "shell",
         "args": [
           "build",
-          "${workspaceFolder}/src/GroceryList.sln"
+          "${workspaceFolder}/GroceryList.sln"
         ],
         "group": {
           "kind": "build",
