--- a/src/GroceryList.Api/GroceryList.Api.csproj
+++ b/src/GroceryList.Api/GroceryList.Api.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GroceryList.Application\GroceryList.Application.csproj" />
+    <ProjectReference Include="..\GroceryList.Infrastructure\GroceryList.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
