--- a/src/GroceryList.Application/GroceryList.Application.csproj
+++ b/src/GroceryList.Application/GroceryList.Application.csproj
@@ -5,5 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\GroceryList.Core\GroceryList.Core.csproj" />
+  </ItemGroup>
 
 </Project>
