--- a/src/GroceryList.Infrastructure/GroceryList.Infrastructure.csproj
+++ b/src/GroceryList.Infrastructure/GroceryList.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GroceryList.Core\GroceryList.Core.csproj" />
+  </ItemGroup>
+
 </Project>
