Problem with GetShoppingRepository

--- a/src/GroceryList.Application/GroceryList.Application.csproj
+++ b/src/GroceryList.Application/GroceryList.Application.csproj
@@ -8,6 +8,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\GroceryList.Core\GroceryList.Core.csproj" />
+    <ProjectReference Include="..\GroceryList.Infrastructure\GroceryList.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
