Errors with ShoppingList

--- a/src/GroceryList.Api/GroceryList.Api.csproj
+++ b/src/GroceryList.Api/GroceryList.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GroceryList.Application\GroceryList.Application.csproj" />
+	  <ProjectReference Include="..\GroceryList.Infrastructure\GroceryList.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
